--- a/sample.html
+++ b/sample.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <h1>背景　世界</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat nam, necessitatibus odit, mollitia corrupti doloremque cupiditate, 
-        saepe eligendi quidem maxime earum incidunt ducimus quis minus voluptas sunt recusandae. Sit, aliquid?</p>
+    <p>コミット可能なすべての/p>
 </body>
 </html>
